[package]
name = "rs-dynamic-mvt"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["tracing", "macros"] }
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.6.1", features = ["cors"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any", "postgres"] }
wkb = "0.7.1"
dotenv = "0.15.0"
h3o = "0.6.4"
indoc = "2.0.5"
protobuf = "3.7.1"
geo-types = "0.7.13"
bytes = "1.8.0"
futures = "0.3.31"
http-body-util = "0.1.2"
http-body = "1.0.1"
redis = "*"
sha2 = "0.10.8"
